--- a/EnrollmentMgmt/src/main/resources/application.properties
+++ b/EnrollmentMgmt/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=EnrollmentMgmt
+spring.datasource.driver-class-name = org.postgresql.Driver
+spring.datasource.url = jdbc:postgresql://localhost:5432/spring_db
+spring.datasource.username = postgres
+spring.datasource.password =
+ 
+server.port=4445
+spring.jpa.hibernate.ddl-auto = update
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
+spring.jpa.show-sql =true
+spring.jpa.properties.hibernate.format_sql=true
